Month Wise EMI splitup Calculatiomn

--- a/MortgageCalculator.Web/Views/Home/Index.cshtml
+++ b/MortgageCalculator.Web/Views/Home/Index.cshtml
@@ -188,7 +188,7 @@
             var data = {
                 LoanAmount: parseFloat($('#txtAmount').val()),
                 InterestRate: parseFloat($('#txtInterestRate').val()),
-                DurationYears: parseInt($('#txtLoanDuration').val())
+                TermsInYears: parseInt($('#txtLoanDuration').val())
             };
 
 
