--- a/MortgageCalculator.Web/Views/Shared/_Layout.cshtml
+++ b/MortgageCalculator.Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <img src="~/img/cba-logo.png"/>
-                @Html.ActionLink("Simple Mortgage Calculator", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Simple Mortgage Calculator", "MortgageCalculator", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
         </div>
     </div>
